[gd_scene load_steps=7 format=3 uid="uid://0hp31gh62r4k"]

[ext_resource type="Texture2D" uid="uid://bxo75spex56do" path="res://Arts/bars/wine_button.png" id="1_scm3b"]
[ext_resource type="Script" path="res://Scripts/wine_controller.gd" id="1_xinj6"]
[ext_resource type="Texture2D" uid="uid://bguchph0sa3ls" path="res://Arts/bars/wine_bar_under.png" id="3_arbks"]
[ext_resource type="Texture2D" uid="uid://cinpx6q1s4bki" path="res://Arts/bars/wine_bar_over.png" id="4_ybbll"]
[ext_resource type="Texture2D" uid="uid://imykemup1u6x" path="res://Arts/bars/wine_bar_progress.png" id="5_v4i0r"]
[ext_resource type="AudioStream" uid="uid://cjeblh1rxtrk6" path="res://Audios/bars/411172__drink.wav" id="6_ce5ah"]

[node name="WineControl" type="Node2D"]
script = ExtResource("1_xinj6")
metadata/_edit_group_ = true

[node name="WineButton" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_scm3b")

[node name="ClickDetect" type="Control" parent="WineButton"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -42.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TipsyBar" type="TextureProgressBar" parent="."]
offset_left = -29.0
offset_top = 47.0
offset_right = -1.0
offset_bottom = 56.0
scale = Vector2(2, 2)
max_value = 3.0
value = 1.0
texture_under = ExtResource("3_arbks")
texture_over = ExtResource("4_ybbll")
texture_progress = ExtResource("5_v4i0r")

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ce5ah")
